--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@ Http.onreadystatechange = (e) => {
   </section><!-- End Hero -->
 
   <main id="main">
-
-    <!-- ======= About Section ======= -->
+ <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container-fluid">
 
@@ -144,25 +143,25 @@ Http.onreadystatechange = (e) => {
           </div>
 
           <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5" data-aos="fade-left">
-            <h3>Watch the Demo</h3>
-            <p>Forget about old fashioned printed visiting cards that generally goes to the dustbin.With our Digital Business Card, you can create and share your contact information that has Actionable one click events like Call, Email, Whatsapp, Navigation, Website Link, Payment, Social Links, Maps and more.</p>
+            <h3>Digital Card for digital era</h3>
+            <!--<p>With our Digital Business Card you can do one click events like Call, Email, Whatsapp, Navigation, Website Link, Payment, Social Links, Maps and more.</p>-->
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon"><i class="ri-time-fill"></i></div>
               <h4 class="title"><a href="">ONLINE VCARDS SAVES YOU TIME AND MONEY</a></h4>
-              <p class="description">Save money and skip the hassle of designing and ordering paper business cards and create branded business cards for every employee with Online Vcards</p>
+              <!--<p class="description">Save money and skip the hassle of designing and ordering paper business cards and create branded business cards for every employee with Online Vcards</p>-->
             </div>
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
               <div class="icon"><i class="ri-gift-2-fill"></i></div>
               <h4 class="title"><a href="">TARGET LEADS MORE EFFICIENTLY</a></h4>
-              <p class="description">Whenever you shake a hand is working for you by collecting who you met, where you met, and a piece of contact information to remember them by.</p>
+              <!--<p class="description">Whenever you shake a hand is working for you by collecting who you met, where you met, and a piece of contact information to remember them by.</p>-->
             </div>
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon"><i class="ri-contacts-fill"></i></div>
               <h4 class="title"><a href="">EXPORT YOUR CONTACTS TO ANY CRM</a></h4>
-              <p class="description">Less than 12% of paper business cards end up in a company’s CRM. With Online Vcards, upload 100% of the contacts your team meets to one centralized database.</p>
+             <!-- <p class="description">Less than 12% of paper business cards end up in a company’s CRM. With Online Vcards, upload 100% of the contacts your team meets to one centralized database.</p>-->
             </div>
 
           </div>
@@ -170,6 +169,170 @@ Http.onreadystatechange = (e) => {
 
       </div>
     </section><!-- End About Section -->
+    <!-- ======= Gallery Section ======= -->
+    <section id="gallery" class="gallery">
+      <div class="container">
+
+        <div class="section-title" data-aos="fade-up">
+          <h2>Gallery</h2>
+          <p>Check our Gallery</p>
+        </div>
+
+        <div class="row no-gutters" data-aos="fade-left">
+
+          <div class="col-lg-3 col-md-4">
+            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
+              <a href="/static/assets/img/gallery/gallery-1.png" class="venobox" data-gall="gallery-item">
+                <img src="/static/assets/img/gallery/gallery-1.png" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="150">
+              <a href="/static/assets/img/gallery/gallery-2.png" class="venobox" data-gall="gallery-item">
+                <img src="/static/assets/img/gallery/gallery-2.png" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
+              <a href="/static/assets/img/gallery/gallery-3.png" class="venobox" data-gall="gallery-item">
+                <img src="/static/assets/img/gallery/gallery-3.png" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="250">
+              <a href="/static/assets/img/gallery/gallery-4.png" class="venobox" data-gall="gallery-item">
+                <img src="/static/assets/img/gallery/gallery-4.png" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
+              <a href="/static/assets/img/gallery/gallery-5.png" class="venobox" data-gall="gallery-item">
+                <img src="/static/assets/img/gallery/gallery-5.png" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="350">
+              <a href="/static/assets/img/gallery/gallery-6.png" class="venobox" data-gall="gallery-item">
+                <img src="/static/assets/img/gallery/gallery-6.png" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <!--<div class="col-lg-3 col-md-4">
+            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="400">
+              <a href="/static/assets/img/gallery/gallery-7.png" class="venobox" data-gall="gallery-item">
+                <img src="/static/assets/img/gallery/gallery-7.png" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="450">
+              <a href="/static/assets/img/gallery/gallery-8.png" class="venobox" data-gall="gallery-item">
+                <img src="/static/assets/img/gallery/gallery-8.png" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>-->
+
+        </div>
+
+      </div>
+    </section><!-- End Gallery Section -->
+  <!-- ======= Pricing Section ======= -->
+    <section id="pricing" class="pricing">
+      <div class="container">
+
+        <div class="section-title" data-aos="fade-up">
+          <h2>Pricing</h2>
+          <p>Check our Pricing</p>
+        </div>
+
+        <div class="row" data-aos="fade-left">
+
+          <!--<div class="col-lg-3 col-md-6">
+            <div class="box" data-aos="zoom-in" data-aos-delay="100">
+              <h3>Free</h3>
+              <h4><sup>$</sup>0<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li class="na">Pharetra massa</li>
+                <li class="na">Massa ultricies mi</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Buy Now</a>
+              </div>
+            </div>
+          </div>-->
+
+          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
+            <div class="box featured" data-aos="zoom-in" data-aos-delay="200">
+              <h3>Business</h3>
+              <h4><sup>&#x20a8;</sup>99<span> / For Lifetime</span></h4>
+              <ul>
+                <li>Free Support for lifetime</li>
+                <li>AnyTime Edit</li>
+                <li>Always online</li>
+                <li>Best Customer Support</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#pricing" class="btn-buy">Buy Now</a>
+              </div>
+            </div>
+          </div>
+
+          <!--<div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+            <div class="box" data-aos="zoom-in" data-aos-delay="300">
+              <h3>Developer</h3>
+              <h4><sup>$</sup>29<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li>Massa ultricies mi</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Buy Now</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+            <div class="box" data-aos="zoom-in" data-aos-delay="400">
+              <span class="advanced">Advanced</span>
+              <h3>Ultimate</h3>
+              <h4><sup>$</sup>49<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li>Massa ultricies mi</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Buy Now</a>
+              </div>
+            </div>
+          </div>-->
+
+        </div>
+
+      </div>
+    </section><!-- End Pricing Section -->
+
+   
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
@@ -396,85 +559,6 @@ Http.onreadystatechange = (e) => {
       </div>
     </section>--><!-- End Details Section -->
 
-    <!-- ======= Gallery Section ======= -->
-    <section id="gallery" class="gallery">
-      <div class="container">
-
-        <div class="section-title" data-aos="fade-up">
-          <h2>Gallery</h2>
-          <p>Check our Gallery</p>
-        </div>
-
-        <div class="row no-gutters" data-aos="fade-left">
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
-              <a href="/static/assets/img/gallery/gallery-1.png" class="venobox" data-gall="gallery-item">
-                <img src="/static/assets/img/gallery/gallery-1.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="150">
-              <a href="/static/assets/img/gallery/gallery-2.png" class="venobox" data-gall="gallery-item">
-                <img src="/static/assets/img/gallery/gallery-2.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
-              <a href="/static/assets/img/gallery/gallery-3.png" class="venobox" data-gall="gallery-item">
-                <img src="/static/assets/img/gallery/gallery-3.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="250">
-              <a href="/static/assets/img/gallery/gallery-4.png" class="venobox" data-gall="gallery-item">
-                <img src="/static/assets/img/gallery/gallery-4.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
-              <a href="/static/assets/img/gallery/gallery-5.png" class="venobox" data-gall="gallery-item">
-                <img src="/static/assets/img/gallery/gallery-5.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="350">
-              <a href="/static/assets/img/gallery/gallery-6.png" class="venobox" data-gall="gallery-item">
-                <img src="/static/assets/img/gallery/gallery-6.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <!--<div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="400">
-              <a href="/static/assets/img/gallery/gallery-7.png" class="venobox" data-gall="gallery-item">
-                <img src="/static/assets/img/gallery/gallery-7.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="450">
-              <a href="/static/assets/img/gallery/gallery-8.png" class="venobox" data-gall="gallery-item">
-                <img src="/static/assets/img/gallery/gallery-8.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>-->
-
-        </div>
-
-      </div>
-    </section><!-- End Gallery Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
@@ -622,90 +706,7 @@ Http.onreadystatechange = (e) => {
       </div>
     </section>--><!-- End Team Section -->
 
-    <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
-      <div class="container">
-
-        <div class="section-title" data-aos="fade-up">
-          <h2>Pricing</h2>
-          <p>Check our Pricing</p>
-        </div>
-
-        <div class="row" data-aos="fade-left">
-
-          <!--<div class="col-lg-3 col-md-6">
-            <div class="box" data-aos="zoom-in" data-aos-delay="100">
-              <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
-              </div>
-            </div>
-          </div>-->
-
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="200">
-              <h3>Business</h3>
-              <h4><sup>&#x20b9;</sup>99<span> / For Lifetime</span></h4>
-              <ul>
-                <li>Free Support for lifetime</li>
-                <li>AnyTime Edit</li>
-                <li>Always online</li>
-                <li>Best Customer Support</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
-              </div>
-            </div>
-          </div>
-
-          <!--<div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
-            <div class="box" data-aos="zoom-in" data-aos-delay="300">
-              <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
-            <div class="box" data-aos="zoom-in" data-aos-delay="400">
-              <span class="advanced">Advanced</span>
-              <h3>Ultimate</h3>
-              <h4><sup>$</sup>49<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
-              </div>
-            </div>
-          </div>-->
-
-        </div>
-
-      </div>
-    </section><!-- End Pricing Section -->
-
+  
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq section-bg">
       <div class="container">
