--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@ Http.onreadystatechange = (e) => {
       </div>
     </div>
   </footer><!-- End Footer -->
- <a href="#" class="buy-now"><i>Buy Now</i></a>
+ <a href="#pricing" class="buy-now"><i>Buy Now</i></a>
   <a href="#" class="back-to-top"><i class="ri-arrow-up-s-line"></i></a>
   <div id="preloader"></div>
 
