--- a/login.html
+++ b/login.html
@@ -281,10 +281,10 @@ function getFbUserData(){
 // Logout from facebook
 function fbLogout() {
     FB.logout(function() {
-        document.getElementById('fbLink').setAttribute("onclick","fbLogin()");
+       /* document.getElementById('fbLink').setAttribute("onclick","fbLogin()");
         document.getElementById('fbLink').innerHTML = '<img src="fblogin.png"/>';
         document.getElementById('userData').innerHTML = '';
-        document.getElementById('status').innerHTML = 'You have successfully logout from Facebook.';
+        document.getElementById('status').innerHTML = 'You have successfully logout from Facebook.';*/
     });
 }
 </script>
