--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
          }
          
          /********* facebook login   **********/
-           window.fbAsyncInit = function() {
+       /*    window.fbAsyncInit = function() {
     FB.init({
       appId      : '{214165990033725}',
       cookie     : true,
@@ -64,7 +64,7 @@
   FB.getLoginStatus(function(response) {
     statusChangeCallback(response);
   });
-}
+}*/
          /********* facebook login   **********/
 		 
       </script>
