--- a/GoogleLogin.html
+++ b/GoogleLogin.html
@@ -17,8 +17,8 @@
 function renderButton() {
     gapi.signin2.render('gSignIn', {
         'scope': 'profile email',
-        'width': 240,
-        'height': 50,
+        'width': 'auto',
+        'height': 'auto',
         'longtitle': true,
         'theme': 'dark',
         'onsuccess': onSuccess,
