--- a/GsignNew.html
+++ b/GsignNew.html
@@ -7,6 +7,17 @@
   <script>
     function onSuccess(googleUser) {
       console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
+	   var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+        console.log('Full Name: ' + profile.getName());
+        console.log('Given Name: ' + profile.getGivenName());
+        console.log('Family Name: ' + profile.getFamilyName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail());
+
+        // The ID token you need to pass to your backend:
+        var id_token = googleUser.getAuthResponse().id_token;
+        console.log("ID Token: " + id_token);
     }
     function onFailure(error) {
       console.log(error);
@@ -16,8 +27,10 @@
         'scope': 'profile email',
         'width': 240,
         'height': 50,
-        'longtitle': true,
+        'longtitle': false,
         'theme': 'dark',
+		'display':'none !important',
+		'visibility': 'hidden',
         'onsuccess': onSuccess,
         'onfailure': onFailure
       });
