--- a/gsign.html
+++ b/gsign.html
@@ -5,8 +5,8 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
   </head>
   <body>
-    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-	<button name="Gsignin"  type="button" onclick="fbLogin()" id="fbLink">GSIGN</button>
+    <button class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></button>
+	<button name="Gsignin"  type="button" onclick="onSignIn()" id="fbLink">GSIGN</button>
     <script>
       function onSignIn(googleUser) {
         // Useful data for your client-side scripts:
