--- a/gsign.html
+++ b/gsign.html
@@ -5,7 +5,7 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
   </head>
   <body>
-    <button class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></button>
+    <button class="g-signin2" onclick="onSignIn" data-theme="dark"></button>
 	<button name="Gsignin"  type="button" onclick="onSignIn()" id="fbLink">GSIGN</button>
     <script>
       function onSignIn(googleUser) {
