--- a/gsign.html
+++ b/gsign.html
@@ -38,7 +38,7 @@
          console.log(JSON. stringify(resp));
          var accessToken = response.access_token;
          var idToken = response.id_token;
-         console.log("
+         console.log("");
          // You can also now use gapi.client to perform authenticated requests.
          });}
          
