--- a/gsign.html
+++ b/gsign.html
@@ -1,53 +1,81 @@
-<html lang="en">
-   <head>
-      <meta name="google-signin-scope" content="profile email">
-      <meta name="google-signin-client_id" content="4894903574-rl2k1hhdbr6br42b9n9t95tr62fiu46c.apps.googleusercontent.com">
-      <script src="https://apis.google.com/js/platform.js" async defer></script>
-   </head>
-   <body>
-      <button onclick="login()">Click me</button>
-      <a href="#" onclick="signOut();">Sign out</a>
-      <script>
-         function onSignIn(googleUser) {
-           // Useful data for your client-side scripts:
-           var profile = googleUser.getBasicProfile();
-           console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-           console.log('Full Name: ' + profile.getName());
-           console.log('Given Name: ' + profile.getGivenName());
-           console.log('Family Name: ' + profile.getFamilyName());
-           console.log("Image URL: " + profile.getImageUrl());
-           console.log("Email: " + profile.getEmail());
-         
-           // The ID token you need to pass to your backend:
-           var id_token = googleUser.getAuthResponse().id_token;
-           console.log("ID Token: " + id_token);
-         }
-		 
-         function login() {
-         gapi.auth2.authorize({
-         client_id: '4894903574-rl2k1hhdbr6br42b9n9t95tr62fiu46c.apps.googleusercontent.com',
-         scope: 'email profile openid',
-         response_type: 'id_token permission'
-         }, function(response) {
-         if (response.error) {
-         console.log("Error login : "+response.error)
-         return;
-         }
-         // The user authorized the application for the scopes requested.
-         console.log("UserData");
-         console.log(JSON. stringify(resp));
-         var accessToken = response.access_token;
-         var idToken = response.id_token;
-         console.log("");
-         // You can also now use gapi.client to perform authenticated requests.
-         });}
-         
-         function signOut() {
-         var auth2 = gapi.auth2.getAuthInstance();
-         auth2.signOut().then(function () {
-         console.log('User signed out.');
-         });
-         }
-      </script>
-   </body>
+<html>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+  <script src="https://apis.google.com/js/api:client.js"></script>
+  <script>
+  var googleUser = {};
+  var startApp = function() {
+    gapi.load('auth2', function(){
+      // Retrieve the singleton for the GoogleAuth library and set up the client.
+      auth2 = gapi.auth2.init({
+        client_id: '4894903574-rl2k1hhdbr6br42b9n9t95tr62fiu46c.apps.googleusercontent.com',
+        cookiepolicy: 'single_host_origin',
+        // Request scopes in addition to 'profile' and 'email'
+        //scope: 'additional_scope'
+      });
+      attachSignin(document.getElementById('customBtn'));
+    });
+  };
+
+  function attachSignin(element) {
+    console.log(element.id);
+    auth2.attachClickHandler(element, {},
+        function(googleUser) {
+          document.getElementById('name').innerText = "Signed in: " +
+              googleUser.getBasicProfile().getName();
+        }, function(error) {
+          alert(JSON.stringify(error, undefined, 2));
+        });
+  }
+  </script>
+  <style type="text/css">
+    #customBtn {
+      display: inline-block;
+      background: white;
+      color: #444;
+      width: 190px;
+      border-radius: 5px;
+      border: thin solid #888;
+      box-shadow: 1px 1px 1px grey;
+      white-space: nowrap;
+    }
+    #customBtn:hover {
+      cursor: pointer;
+    }
+    span.label {
+      font-family: serif;
+      font-weight: normal;
+    }
+    span.icon {
+      background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat;
+      display: inline-block;
+      vertical-align: middle;
+      width: 42px;
+      height: 42px;
+    }
+    span.buttonText {
+      display: inline-block;
+      vertical-align: middle;
+      padding-left: 42px;
+      padding-right: 42px;
+      font-size: 14px;
+      font-weight: bold;
+      /* Use the Roboto font that is loaded in the <head> */
+      font-family: 'Roboto', sans-serif;
+    }
+  </style>
+  </head>
+  <body>
+  <!-- In the callback, you would hide the gSignInWrapper element on a
+  successful sign in -->
+  <div id="gSignInWrapper">
+    <span class="label">Sign in with:</span>
+    <div id="customBtn" class="customGPlusSignIn">
+      <span class="icon"></span>
+      <span class="buttonText">Google</span>
+    </div>
+  </div>
+  <div id="name"></div>
+  <script>startApp();</script>
+</body>
 </html>
