--- a/sociallogin.html
+++ b/sociallogin.html
@@ -28,7 +28,7 @@
 <div class="card-body">
 <h5 class="card-title text-center">Sign In</h5>
 <form class="form-signin">
-<button id ="customBtn" class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
+<button id ="customBtn" class="btn btn-lg btn-google btn-block text-uppercase" type="button"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
 <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="button" onclick="fbLogin()" id="fbLink"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button>
 <hr class="my-4">
 <div class="form-label-group">
