--- a/bkp/login.html
+++ b/bkp/login.html
@@ -14,13 +14,15 @@
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+
+<style id="compiled-css" type="text/css">
 <link href="/static/assets/css/login_style.css" rel="stylesheet">
+</style>
 
 </head>
 <body>
 <!-- This snippet uses Font Awesome 5 Free as a dependency. You can download it at fontawesome.io! -->
 
-<body>
 <div class="container">
 <div class="row">
 <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
@@ -28,7 +30,7 @@
 <div class="card-body">
 <h5 class="card-title text-center">Sign In</h5>
 <form class="form-signin">
-<button id ="customBtn" class="btn btn-lg btn-google btn-block text-uppercase" type="button"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
+<button class="btn btn-lg btn-google btn-block text-uppercase" id="customBtn" type="button"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
 <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="button" onclick="fbLogin()" id="fbLink"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button>
 <hr class="my-4">
 <div class="form-label-group">
@@ -54,8 +56,12 @@
 </div>
 </div>
 </div>
+
+
 </body>
-<script src="/static/assets/js/facebook_login.js"></script>
+
+
+<!-- TODO: Missing CoffeeScript 2 -->
   <script>
   var googleUser = {};
   var startApp = function() {
@@ -93,8 +99,9 @@
     
     auth2.disconnect();
 }
-startApp();
   </script>
 
+<script src="/static/assets/js/facebook_login.js"></script>
+<script src="/static/assets/js/google_login.js"></script>
 </body>
 </html>
