--- a/form.html
+++ b/form.html
@@ -94,6 +94,13 @@
 		font-size: 7px;
 		position: absolute;
 	}
+	@media screen and (max-width: 768px) {
+  .signup-form {
+		width: auto;
+		margin: 0 auto;
+		padding: 0;
+	}
+}
 </style>
 </head>
 <body>
@@ -131,9 +138,7 @@
 		<div class="form-group">
             <button type="submit" class="btn btn-primary btn-block btn-lg">Sign Up</button>
         </div>
-		<p class="small text-center">By clicking the Sign Up button, you agree to our <br><a href="#">Terms &amp; Conditions</a>, and <a href="#">Privacy Policy</a>.</p>
     </form>
-	<div class="text-center">Already have an account? <a href="#">Login here</a>.</div>
 </div>
 </body>
 </html>                            
