--- a/login.html
+++ b/login.html
@@ -57,6 +57,6 @@
 </body>
 <script src="/static/assets/js/facebook_login.js"></script>
 <script src="/static/assets/js/google_login.js"></script>
- 
+<script>startApp();</script>
 </body>
 </html>
