removed footer and changed razor pay url

--- a/dhinakaran.html
+++ b/dhinakaran.html
@@ -64,6 +64,7 @@
 									    <span>linkedin</span>
                                     </div>
                                  </a> 
+								 
                                  <!-- Instagram Button -->
                                 <!--  <a href="https://www.instagram.com/able_industries" class="social-margin" target="blank">
                                     <div class="social-icon instagram">
@@ -113,7 +114,7 @@
                                     </div>
                                  </a>
 								 <!-- Payment Button -->
-                                 <a href="https://invoices.razorpay.com/v1/l/inv_ElQRNUJTh2PhSf" class="social-margin" target="blank">
+                                 <a href="https://pages.razorpay.com/pl_ElRUTtXWH3IpeY/view#" class="social-margin" target="blank">
                                     <div class="social-icon payment">
                                        <i class="fas fa-money-check-alt" aria-hidden="true"></i>
 									    <span>payme</span>
@@ -203,9 +204,9 @@
                                  </a>
                               </div>
                            </div>
-						    <div class="row heading_style center_align">
+						    <!--<div class="row heading_style center_align">
 							  <h3 class ="footer_font"><a href="https://api.whatsapp.com/send?phone=+918531990331">Powered By : Elavarasan - 8531990331</a></h3>
-							  </div>
+							  </div>-->
                         </div>
                      </div>
                   </div>
