--- a/elavarasan.html
+++ b/elavarasan.html
@@ -107,7 +107,7 @@
                                     </div>
                                  </a>
 								 <!-- Payment Button -->
-                                 <a href="https://p-y.tm/1Kd-tTZ" class="social-margin" target="blank">
+                                 <a href="https://pages.razorpay.com/pl_ElRHr5q55UvKL0/view" class="social-margin" target="blank">
                                     <div class="social-icon payment">
                                        <i class="fas fa-money-check-alt" aria-hidden="true"></i>
 									    <span>payme</span>
