--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-      <title>Bootstrap Login Page Card with Floating Labels</title>
+      <title>Wishmecards Login Page</title>
       <meta http-equiv="content-type" content="text/html; charset=UTF-8">
       <meta name="robots" content="noindex, nofollow">
       <meta name="googlebot" content="noindex, nofollow">
@@ -53,6 +53,6 @@
    <script src="/static/assets/js/facebook_login.js"></script>
    <script src="/static/assets/js/google_login.js"></script>
    <script>startApp();</script>
-   <script src="/static/assets/js/email_login.js"></script>
+   <script src="/static/assets/js/login.js"></script>
    </body>
 </html>
