--- a/signup.html
+++ b/signup.html
@@ -10,8 +10,10 @@
 	<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css">
 	<!-- Main Style Css -->
     <link rel="stylesheet" href="/static/assets/css/form_style.css"/>
+	<link href="/static/assets/css/css-loader.css" rel="stylesheet">
 </head>
 <body class="form-v2">
+<div id="loader" class="loader loader-default is-active"></div>
 	<div class="page-content">
 		<div class="form-v2-content">
 			<form class="form-detail" action="#" method="post" id="myform">
@@ -28,8 +30,14 @@
 					<label for="comfirm-password">Confirm Password:</label>
 					<input type="password" name="confirm_password" id="confirm_password" class="input-text" required>
 				</div>
+				<div id="duplicateEmail" class="form-row duplicateEmail">
+					<label class="duplicateEmail" for="duplicate">Email id already registered. Please login </label>
+				</div>
+				<div id="serverError" class="form-row serverError">
+					<label class="duplicateEmail" for="serverError">Internal Server error </label>
+				</div>
 				<div class="div_center form-row-last">
-					<input type="submit" name="register" class="register" value="Sign Up">
+					<input type="submit" name="register" id="signup" class="register" value="Sign Up">
 				</div>
 			</form>
 		</div>
