--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                      <h1>Build Your Digital Business Card With <span>Wishmecards</span></h1>
                      <h2>We are team of talanted designers making websites</h2>
                      <div class="text-center text-lg-left">
-                        <a href="#pricing" id="buyNow" class="btn-get-started scrollto">Buy Now</a>
+                        <a href="#pricing" id="buyNow" class="buyNow btn-get-started scrollto">Buy Now</a>
                      </div>
                   </div>
                </div>
@@ -245,7 +245,7 @@
                            <li>Best Customer Support</li>
                         </ul>
                         <div class="btn-wrap">
-                           <a href="#pricing" id="buyNow" class="btn-buy">Buy Now</a>
+                           <a href="#pricing" id="buyNow" class="buyNow btn-buy">Buy Now</a>
                         </div>
                      </div>
                   </div>
@@ -817,7 +817,7 @@
          </div>
       </footer>
       <!-- End Footer -->
-      <a href="#pricing" id="buyNow" class="buy-now"><i>Buy Now</i></a>
+      <a href="#pricing" id="buyNow" class="buyNow buy-now"><i>Buy Now</i></a>
       <a href="#" class="back-to-top"><i class="ri-arrow-up-s-line"></i></a>
       <div id="preloader"></div>
       <!-- Vendor JS Files -->
