--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                <li><a href="#gallery">Gallery</a></li>
                <!-- <li><a href="#team">Team</a></li>-->
                <li><a href="#pricing">Pricing</a></li>
+			   <li><a href="login.html" style="font-weight:900">Login</a></li>
+			   <li><a href="signup.html" style="font-weight:900">Signup</a></li>
                <!--<li class="drop-down"><a href="">Drop Down</a>
                   <ul>
                     <li><a href="#">Drop Down 1</a></li>
