--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="row">
                <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
                   <div data-aos="zoom-out">
-                     <h1>Build Your Digital Business Card With <span>Wishmecards</span></h1>
+                     <h1>Build Your Digital Business Card With <span>Wishmecards @ 99 RS</span></h1>
                      <h2>We are team of talanted designers making websites</h2>
                      <div class="text-center text-lg-left">
                         <a href="#pricing" id="buyNow" class="buyNow btn-get-started scrollto">Buy Now</a>
