--- a/login.html
+++ b/login.html
@@ -27,8 +27,8 @@
                      <div class="card-body">
                         <h5 class="card-title text-center">Sign In</h5>
                         <form class="form-signin" id="loginForm">
-                           <button id ="customBtn" class="btn btn-lg btn-google btn-block text-uppercase" type="button"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
-                           <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="button" onclick="fbLogin()" id="fbLink"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button>
+                           <button id ="customBtn" class="btn btn-lg btn-google btn-block text-uppercase" type="button"><i class="fab fa-google mr-2"></i>Continue with Google</button>
+                           <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="button" onclick="fbLogin()" id="fbLink"><i class="fab fa-facebook-f mr-2"></i>Continue with Facebook</button>
                            <hr class="my-4">
                            <div class="form-label-group">
                               <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email address" required autofocus>
@@ -42,6 +42,7 @@
                               <label>The email or password is incorrect</label>
                            </div>
                            <button id="emailLogin" class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+						   <a href="signup.html" id="" class="btn btn-lg btn-primary btn-block text-uppercase">OR Sign Up</a>
                         </form>
                      </div>
                   </div>
