--- a/jwtAuth.html
+++ b/jwtAuth.html
@@ -8,17 +8,49 @@
 
 <body>
   <div>
-    <button id="getVisitingCard">getVisitingCard</button>
-    <button id="socialAuth">socialAuth</button>
-    <button id="goodLogin">Good Login</button>
-    <button id="badLogin">Bad Login</button>
-    <button id="logout">Logout</button>
+    
+	 <button id="socialAuth">socialAuth</button><br><br>
+	 <button id="signup">SignUp</button><br><br>
+    <button id="goodLogin">Good Login</button><br><br>
+    <button id="badLogin">Bad Login</button><br><br>
+    <button id="logout">Logout</button><br><br><br>
+	<input type="text" name="visitingCardId" id="visitingCardId" placeholder="visitingcardid" value="5eb24720d9678c1324d451d1"/><br><br>
+	<button id="getVisitingCardById">getVisitingCardById</button><br><br>
+	<button id="getVisitingCard">getVisitingCard</button><br><br>
+	<button id="createVisitingCard">CreateVisitingCard - Post </button><br><br><br>
+	<input type="text" name="visitingCardIdPut" id="visitingCardIdPut" placeholder="visitingCardIdPut" value="5eb24720d9678c1324d451d1"/><br><br>
+	<button id="editVisitingCardById">EditVisitingCard by ID- Put </button><br><br>
+	
+   
   </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript">
   //var baseUrl = "https://einvite.tech/";
   var baseUrl = "http://localhost:3500/";
   $(document).ready(function() {
+  
+    $('#getVisitingCardById').click(function() {
+      $.ajax({
+        type: 'GET',
+        url: baseUrl+'visiting_card/'+$('#visitingCardId').val(),
+        contentType: "application/json",
+        beforeSend: function(xhr) {
+          if (localStorage.token) {
+            xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.token);
+          }
+        },
+        success: function(data) {
+        console.log(JSON.stringify(data));
+        alert(JSON.stringify(data));
+          alert('Hello ' + data + '! You have successfully accessed to /api/profile.');
+        },
+        error: function() {
+          alert("Some error occured.");
+        }
+      });
+    });
+	
+	
     $('#getVisitingCard').click(function() {
       $.ajax({
         type: 'GET',
@@ -39,6 +71,100 @@
         }
       });
     });
+	
+	
+  $('#editVisitingCardById').click(function() {
+      $.ajax({
+        type: 'PUT',
+        url: baseUrl+'visiting_card/'+$('#visitingCardIdPut').val(),
+        contentType: "application/json",
+		data: JSON.stringify({
+			"company_link": "https://princedecors.com123",
+			"company_address": "NO:dsdsddssdds put street,Nanmangalam,Chennai-600117."
+		}),
+        beforeSend: function(xhr) {
+          if (localStorage.token) {
+            xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.token);
+          }
+        },
+        success: function(data) {
+        console.log(JSON.stringify(data));
+        alert(JSON.stringify(data));
+          alert('Hello ' + data + '! You have successfully accessed to /api/profile.');
+        },
+        error: function() {
+          alert("Some error occured.");
+        }
+      });
+    });
+	
+	
+    $('#createVisitingCard').click(function() {
+      $.ajax({
+        type: 'POST',
+        url: baseUrl+'visiting_cards',
+        contentType: "application/json",
+		data: JSON.stringify({
+    "user_name": "elavarasan",
+    "email": "rameshelava@gmail.com",
+    "mobile_no": "8531990331",
+    "company_name": "PrinceDecors",
+    "designation": "Founder",
+    "company_link": "https://princedecors.com",
+    "company_address": "NO:6/64,balaraman first cross street,Nanmangalam,Chennai-600117.",
+    "facebook_link": "https://www.facebook.com/princedecors/",
+    "messenger_link": "http://m.me/princedecors",
+    "twitter_link": "https://twitter.com/elavara27570054",
+    "linkedin_link": "https://www.linkedin.com/in/elavarasan92",
+    "instagram_link": "https://www.instagram.com/princedecors/",
+    "youtube_link": "https://www.youtube.com/watch?v=h9G6Pv3or3c",
+    "other_payment_link": "https://rzp.io/i/OJy8wWO",
+    "google_map_link": "https://goo.gl/maps/De72fPVZ8tP884eM9"
+}),
+        beforeSend: function(xhr) {
+          if (localStorage.token) {
+            xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.token);
+          }
+        },
+        success: function(data) {
+        console.log(JSON.stringify(data));
+        alert(JSON.stringify(data));
+          alert('Hello ' + data + '! You have successfully accessed to /api/profile.');
+        },
+        error: function() {
+          alert("Sorry, ERROR occured.");
+        }
+      });
+    });
+	
+	$('#signup').click(function() {
+      $.ajax({
+        type: "POST",
+        url: baseUrl+"auth/socialauth",
+        contentType: "application/json",
+        data: JSON.stringify({
+    "user_name": "Elavarasan",
+    "email": "rameshelava@gmail.com",
+	"password":"default",
+    "picture_link": "https://platform-lookaside.fbsbx.com/platform/profilepic/?asid=3166267760083480&height=50&width=50&ext=1590480380&hash=AeR4gImK_vAuhEWz"
+}),
+        success: function(data) {
+          console.log(data);
+          localStorage.token = data.access_token;
+          console.log('access_token : ' + data.access_token);
+		  console.log('user_name  : ' + data.user_name);
+		  if(data.visiting_card){
+		  console.log('Visiting exists already Visiting Card ID : ' + Object.values(data.visiting_card[0]));
+		  }else{
+		   console.log('no Visiting Card create new ');
+        }},
+        error: function() {
+          alert("Login Failed");
+        }
+      });
+    });
+	
+	
       $('#socialAuth').click(function() {
       $.ajax({
         type: "POST",
@@ -51,8 +177,14 @@
 }),
         success: function(data) {
           console.log(data);
-          localStorage.token = data.token;
-          alert('Got a token from the server! Token: ' + data.token);
+          localStorage.token = data.access_token;
+          console.log('access_token : ' + data.access_token);
+		  console.log('user_name  : ' + data.user_name);
+		  if(data.visiting_card){
+		  console.log('Visiting Card ID : ' + Object.values(data.visiting_card[0]));
+		  }else{
+		   console.log('no Visiting Card create new ');
+        }
         },
         error: function() {
           alert("Login Failed");
@@ -65,13 +197,19 @@
         url: baseUrl+"auth/login",
         contentType: "application/json",
         data: JSON.stringify({
-          "email": "elavarasan_natarajan@yahoo.com",
+          "email": "rameshelava@gmail.com",
           "password": "default"
         }),
         success: function(data) {
           console.log(data);
-          localStorage.token = data.token;
-          alert('Got a token from the server! Token: ' + data.token);
+          localStorage.token = data.access_token;
+          console.log('access_token : ' + data.access_token);
+		  console.log('user_name  : ' + data.user_name);
+		  if(data.visiting_card){
+		  console.log('Visiting Card ID : ' + Object.values(data.visiting_card[0]));
+		  }else{
+		   console.log('no Visiting Card create new ');
+        }
         },
         error: function() {
           alert("Login Failed");
