--- a/editCard.html
+++ b/editCard.html
@@ -50,8 +50,9 @@
 					<label class="duplicateEmail" for="serverError">Internal Server error </label>
 				</div>
 				<div class="div_center form-row-last">
-					 <input style="margin-right :10px; width :100px; " type="button" name="register" id="cancelCard" class="register" value="Cancel">
-                  <input style="margin-left :10px; width :100px;" type="submit" name="register" id="createCard" class="register" value="Next">
+					 <input style="margin-right :10px; width :80px; " type="button" name="register" id="cancelCard" class="register" value="Cancel">
+					  <input style="margin-right :10px; width :80px; " type="button" name="register" id="viewCard" class="register" value="View">
+                  <input style="margin-left :10px; width :80px;" type="submit" name="register" id="createCard" class="register" value="Next">
 				</div>
 			</form>
 		</div>
