--- a/editCard.html
+++ b/editCard.html
@@ -52,7 +52,7 @@
 				<div class="div_center form-row-last">
 					 <input style="margin-right :10px; width :80px; " type="button" name="register" id="cancelCard" class="register" value="Cancel">
 					  <input style="margin-right :10px; width :80px; " type="button" name="register" id="viewCard" class="register" value="View">
-                  <input style="margin-left :10px; width :80px;" type="submit" name="register" id="createCard" class="register" value="Next">
+                  <input style=" width :80px;" type="submit" name="register" id="createCard" class="register" value="Next">
 				</div>
 			</form>
 		</div>
